# compet_algo

./: .gitignore  0_inputs.txt  0_list_problems.txt  CMakeLists.txt  README.md  barCodes.cpp  coinsCombinations1.cpp  countingRooms.cpp  exams.cpp  factoryMachines.cpp  flippingCoins.cpp  forestQueries.cpp  gridPaths.cpp  increasingSubsequences.cpp  labyrinth.cpp  monsters.cpp  rangeMinimumQueries2.cpp  rangeXorQueries.cpp  sumOfThreeValues.cpp  virtualFriends.cpp  yetAnotherNumberGame.cpp
competition_11-dec/: drunk_vigenere.cpp  increasing_subseq.cpp  ladice.cpp  line_them_up.cpp  magic_trick.cpp  poker_hand.cpp  rijeci.cpp  tower_construction.cpp
exam_previous_year/linux/cpp/: template.cpp  test.sh
exam_previous_year/linux/cpp/tests/: problem1.0.in  problem1.2.in  problem1.3.in  problem1.4.in  problem2.0.in  problem2.1.in  problem2.2.in  problem2.3.in  problem2.4.in  problem3.0.in  problem3.1.in  problem3.2.in  problem3.3.in  problem3.4.in  problem4.0.in  problem4.1.in  problem4.2.in  problem4.3.in  problem4.4.in  problem5.0.in  problem5.1.in  problem5.4.in  problem6.0.in  problem6.1.in  problem6.2.in  problem6.3.in  problem6.4.in  problem7.0.in  problem7.1.in  problem7.2.in  problem7.3.in  problem7.4.in  problem8.0.in  problem8.2.in  problem8.3.in  problem8.4.in  problem9.0.in  problem9.1.in  problem9.2.in  problem9.3.in  (+1 more)
