cmake_minimum_required(VERSION 3.26)
project(compet_algo)

set(CMAKE_CXX_STANDARD 17)

add_executable(yet_another_number_game
        yetAnotherNumberGame.cpp)

add_executable(virtual_friends
        virtualFriends.cpp)

add_executable(coins_combinations_I
        coinsCombinations1.cpp)

add_executable(grid_paths
        gridPaths.cpp)

add_executable(sum_of_three_values
        sumOfThreeValues.cpp)

add_executable(range_xor_queries
        rangeXorQueries.cpp)

add_executable(forest_queries
        forestQueries.cpp)

add_executable(factory_machines
        factoryMachines.cpp)

add_executable(increasing_subsequences
        increasingSubsequences.cpp)